--- a/index.html
+++ b/index.html
@@ -216,11 +216,22 @@ function validSolution(board) {
             </div>
         </section>
         <footer>
-            <ul class="footer-links"> <!-- Как оставить ссылку на дискорд? -->
-                <li>VK</li>
-                <li>GitHub</li>
-                <li>RSS</li>
-                <li>Discord</li>
+            <ul>
+                <li class='footer-item'>2021</li>
+                <li class='footer-item'>
+                    <span class='footer-item'>
+                        <a class='footer-vk'href="https://vk.com/kcherepanov1/"><img src="assets/icons/icon-vk.png" alt="icon-vk.png"></a>
+                    </span>
+                    <span class='footer-item'>
+                        <a class='footer-gh'href="https://github.com/kissMyUSSR/"><img src="assets/icons/icon-gh.png" alt="icon-github.png"></a>
+                    </span>
+                    <span class='footer-item'>
+                        <a class='footer-ds'href="https://discord.com/channels/@me"><img src="assets/icons/icon-ds.png" alt="icon-discord.png"></a>
+                    </span>
+                </li>
+                <li class='footer-item'>
+                    <a class='footer-rss'href="https://rs.school/js/"><img src="assets/icons/icon-rss.svg" alt="icon-RS-School.svg"></a>
+                </li>
             </ul>
         </footer>
     </div>
