feat: touch up the web site

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div class='container'>
         <section class='me'>
             <header>
-                <img src='assets/images/Portrait.jpg' alt='avatar' width='250' height='250'>
+                <div class='avatar'><span class='blank'>『 』</span></div>
+                <!-- <img src='assets/images/Portrait.jpg' alt='avatar' width='250' height='250'> -->
                 <h1>Kirill Cherepanov</h1>
                 <h2>Front-end Developer (Beginner)</h2>
                 <div class="contacts">
@@ -27,19 +28,19 @@
                         </tr>
                         <tr>
                             <th><b>Email</b></th>
-                            <td><a href="mailto:cherkirr@gmail.com">cherkirr@gmail.com</a></th>
+                            <td><a href="mailto:cherkirr@gmail.com" target='_blank'>cherkirr@gmail.com</a></th>
                         </tr>
                         <tr>
                             <th><b>GitHub</b></th>
-                            <td><a href="https://github.com/KissMyUSSR">@KissMyUSSR</a></th>
+                            <td><a href="https://github.com/KissMyUSSR" target='_blank'>@KissMyUSSR</a></th>
                         </tr>
                         <tr>
                             <th><b>VK</b></th>
-                            <td><a href="https://vk.com/kcherepanov1">/kcherepanov1</a></th>
+                            <td><a href="https://vk.com/kcherepanov1" target='_blank'>/kcherepanov1</a></th>
                         </tr>
                         <tr>
                             <th><b>Discord</b></th>
-                            <td>Kot-pauk#6737</th>
+                            <td><a href="https://discordapp.com/users/292300959265062922" target='_blank'>Kot-pauk#6737</a></th>
                         </tr>
                     </table>
             </div>
@@ -47,13 +48,10 @@
             <div class='about-me'>
                 <h3>About me</h3>
                 <p>
-                    I used to play a lot of video games for the entirety of my life, but one horrible day I realized that my PC sucks and I can no longer play my games. Thus I strongly decided to become a web developer to earn some money for a living and for a new PC to proceed with my beloved lifestyle.
+                    Since the very day I was born, I have been spending a lot of time playing video games. But one horrible day, the unthinkable happened: I realized that my PC sucks and I could no longer play my games. Thus I resolved to become a web developer to earn some money for a living and for a new PC to proceed with my beloved lifestyle.
                 </p>
                 <p>
-                    Just joking. I'm a reliable person and I love helping others. One may even call me altruistic, though I am not willing to help others when it might hurt myself. I love learning new stuff and new technologies. And if I like doing something, I may spend 16 hours a day doing it (if I have all this time). Also, I'm quite good at Math and it comes easily for me. Also I have a nice English level, but later on that.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro delectus nihil, magni iste cumque nisi voluptates ipsa dolores enim tempora laudantium, obcaecati ratione dolorum? Molestias nulla aspernatur error deleniti doloribus, tempora nesciunt modi obcaecati est fugit nihil. Aliquid corrupti ex exercitationem at quam magnam nesciunt ea, molestias mollitia! Dolorem nemo nisi sunt, dolor culpa eos quas at expedita dicta iste?
+                    I'm just joking. I consider myself a reliable person. I love helping others to the point that one may even call me altruistic. Though, I do make an effort not to help others when it might hurt me. I love learning new stuff and especially new technologies. Therefore I've decided to commit myself to learning programming. I'm not too good at design right now. But I hope that if I keep building websites, I can eventually become a professional Ui & Ux designer. If I like doing something, I may spend 16 hours a day doing it (if I have all this time). Also, I'm quite profficient at Math; it comes easily for me. I have good English-speaking skills too, but later on that.
                 </p>
             </div>
         </section>
@@ -198,8 +196,7 @@ function validSolution(board) {
                 </ul>
             </div>
             <div class='education'>
-                <h3>Education</h3>
-                <ul class="education-list">
+                <h3>Education</h3><ul class="education-list"> <!--written that there's no blank space between 'em-->
                     <li>
                         <h4><span>BSU</span>, Mech-Math Faculty</h4>
                         <img src="assets/images/BSU.svg" alt="BSU.svg" class="BSU-img">
@@ -220,17 +217,16 @@ function validSolution(board) {
                 <li class='footer-item'>2021</li>
                 <li class='footer-item'>
                     <span class='footer-item'>
-                        <a class='footer-vk'href="https://vk.com/kcherepanov1/"><img src="assets/icons/icon-vk.png" alt="icon-vk.png"></a>
+                        <a class='footer-vk' href="https://vk.com/kcherepanov1/" target='_blank'><img src="assets/icons/icon-vk.png" alt="icon-vk.png"></a>
                     </span>
                     <span class='footer-item'>
-                        <a class='footer-gh'href="https://github.com/kissMyUSSR/"><img src="assets/icons/icon-gh.png" alt="icon-github.png"></a>
-                    </span>
-                    <span class='footer-item'>
-                        <a class='footer-ds'href="https://discord.com/channels/@me"><img src="assets/icons/icon-ds.png" alt="icon-discord.png"></a>
+                        <a class='footer-gh' href="https://github.com/kissMyUSSR/" target='_blank'><img src="assets/icons/icon-gh.png" alt="icon-github.png"></a>
+                    </span><span class='footer-item'>
+                        <a class='footer-ds' href="https://discordapp.com/users/292300959265062922" target='_blank'><img src="assets/icons/icon-ds.png" alt="icon-discord.png"></a>
                     </span>
                 </li>
                 <li class='footer-item'>
-                    <a class='footer-rss'href="https://rs.school/js/"><img src="assets/icons/icon-rss.svg" alt="icon-RS-School.svg"></a>
+                    <a class='footer-rss' href="https://rs.school/js/" target='_blank'><img src="assets/icons/icon-rss.svg" alt="icon-RS-School.svg"></a>
                 </li>
             </ul>
         </footer>
