refactor: remake for the latest task changes

--- a/index.html
+++ b/index.html
@@ -15,34 +15,20 @@
     <div class='container'>
         <section class='me'>
             <header>
-                <div class='avatar'><span class='blank'>『 』</span></div>
+                
+                <div class='avatar'><img src="assets/images/avatar.png" alt="『 』"></div>
                 <h1>Kirill Cherepanov</h1>
                 <h2>Front-end Developer (Beginner)</h2>
                 <div class="contacts">
                     <h3>Contacts</h3>
-                    <table class='contacts'>
-                        <tr>
-                            <th><b>Location</b></th>
-                            <td>Belarus, Minsk</td>
-                        </tr>
-                        <tr>
-                            <th><b>Email</b></th>
-                            <td><a href="mailto:cherkirr@gmail.com" target='_blank'>cherkirr@gmail.com</a></td>
-                        </tr>
-                        <tr>
-                            <th><b>GitHub</b></th>
-                            <td><a href="https://github.com/KissMyUSSR" target='_blank'>@KissMyUSSR</a></td>
-                        </tr>
-                        <tr>
-                            <th><b>VK</b></th>
-                            <td><a href="https://vk.com/kcherepanov1" target='_blank'>/kcherepanov1</a></td>
-                        </tr>
-                        <tr>
-                            <th><b>Discord</b></th>
-                            <td><a href="https://discordapp.com/users/292300959265062922" target='_blank'>Kot-pauk#6737</a></td>
-                        </tr>
-                    </table>
-            </div>
+                    <ul class="contacts">
+                        <li><b>Location</b><span>Belarus, Minsk</span></li>
+                        <li><b>Email</b><a href="mailto:cherkirr@gmail.com" target='_blank'>cherkirr@gmail.com</a></li>
+                        <li><b>GitHub</b><a href="https://github.com/KissMyUSSR" target='_blank'>@KissMyUSSR</a></li>
+                        <li><b>VK</b><a href="https://vk.com/kcherepanov1" target='_blank'>/kcherepanov1</a></li>
+                        <li><b>Discord</b><a href="https://discordapp.com/users/292300959265062922" target='_blank'>Kot-pauk#6737</a></li>
+                    </ul>
+                </div>
             </header>
             <div class='about-me'>
                 <h3>About me</h3>
